Fixed auth chevron arrow alignment. Removed focus outline.

--- a/styleguide/source/_patterns/01-molecules/05-navigation/07-ribbon-dropdown/_ribbon-dropdown.scss
+++ b/styleguide/source/_patterns/01-molecules/05-navigation/07-ribbon-dropdown/_ribbon-dropdown.scss
@@ -14,6 +14,7 @@
   padding: 15px;
   color: $white;
   cursor: pointer;
+  outline: none;
 
   span {
     display: inline-block;
