--- a/styleguide/source/_patterns/01-molecules/05-navigation/08-ribbon-user-menu/_ribbon-user-menu.scss
+++ b/styleguide/source/_patterns/01-molecules/05-navigation/08-ribbon-user-menu/_ribbon-user-menu.scss
@@ -13,6 +13,7 @@
 .ribbon_user-menu_trigger {
   color: transparent;
   cursor: pointer;
+  outline: none;
   margin-top: 5px;
 
   .icon {
@@ -77,7 +78,7 @@
     color: $blue;
     text-decoration: none;
   }
-  
+
   @include breakpoint(740px) {
     float: left;
     padding: 8px;
@@ -119,14 +120,18 @@
     padding: 15px;
     color: $white;
     cursor: pointer;
+    outline: none;
 
     .icon {
       display: inline-block;
       fill: $white;
-      height: 18px;
+      height: 11px;
       width: 10px;
+      line-height: 8px;
+      vertical-align: middle;
       float: right;
       margin-left: .75em;
+      margin-top: .3em;
     }
 
     &:hover,
@@ -146,7 +151,7 @@
 
 /*style auth user's nav item specially*/
 .ribbon_user-menu_nav_item.auth-user {
-  
+
   @include breakpoint(740px) {
     padding: 0;
     width: 200px;
